--- a/Final.html
+++ b/Final.html
@@ -10,8 +10,20 @@
 </head>
 <body>
     <div class="container">   
-    <h1>4</h1>
-    <a href="" class="btn btn-primary">click here</a>
+        <div class="weather-app">
+
+    <h1>Tel Aviv</h1>
+  <ul><li>Sunday</li><li>22:08</li></ul>
+
+ <img src="https://ssl.gstatic.com/onebox/weather/48/thunderstorms.png" alt="symbol-weather"> 
+25° C | F
+<div class="row">
+<div class="col-6">
+<ul><li>wind: 3 km/h  </li> <li>humidity: 20% </li><li>precipitacion: 2% </li></ul>
+</div>
+</div>
+<small> <a href="https://github.com/Deblapin/Final-Project" target="_blank">Open-source code</a> by Debora Lapin  </small>
+</div>
 </div>
 <script src="src/app.js"></script>
 </body>
