--- a/Final.html
+++ b/Final.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style.css">
+   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>Final Weather</title>
+    <link rel="stylesheet" href="src/style.css">
+        <title>Final Weather</title>
 </head>
 <body>
     <div class="container">   
         <div class="weather-app">
 
+
     <h1>Tel Aviv</h1>
-  <ul><li>Sunday</li><li>22:08</li></ul>
+<ul class="header"><li>Sunday</li><li>22:08</li></ul>
+
 
  <img src="https://ssl.gstatic.com/onebox/weather/48/thunderstorms.png" alt="symbol-weather"> 
 25° C | F
