--- a/Final.html
+++ b/Final.html
@@ -19,10 +19,12 @@
 
 
  <img src="https://ssl.gstatic.com/onebox/weather/48/thunderstorms.png" alt="symbol-weather"> 
-25° C | F
+<div class="temperature-now">25° C | F </div>
 <div class="row">
-<div class="col-3">
-<ul><li>wind: 3 km/h  </li> <li>humidity: 20% </li><li>precipitacion: 2% </li></ul>
+<div class="col">
+<ul><li>wind: 3 km/h  </li> 
+</div>
+<div class="col"><li>humidity: 20% </li></div> <div class="col"><li>precipitacion: 2% </li></ul>
 </div>
 </div>
 <small> <a href="https://github.com/Deblapin/Final-Project" target="_blank">Open-source code</a> by Debora Lapin  </small>
