--- a/Final.html
+++ b/Final.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="container">   
+        <div class="weather-app-wrapper">
         <div class="weather-app">
 
 
@@ -27,8 +28,13 @@
 <div class="col"><li>humidity: 20% </li></div> <div class="col"><li>precipitacion: 2% </li></ul>
 </div>
 </div>
-<small> <a href="https://github.com/Deblapin/Final-Project" target="_blank">Open-source code</a> by Debora Lapin  </small>
 
+
+</div>
+
+<small> <a href="https://github.com/Deblapin/Final-Project" target="_blank">Open-source code</a> by Debora Lapin
+</small>
+</div>
 </div>
 </div>
 <script src="src/app.js"></script>
