styled temperature section

--- a/Final.html
+++ b/Final.html
@@ -18,9 +18,14 @@
     <h1>Tel Aviv</h1>
 <ul class="header"><li>Sunday</li><li>22:08</li></ul>
 
+<div class="weather-picture">
+ <img src="https://ssl.gstatic.com/onebox/weather/48/thunderstorms.png" alt="symbol-weather" class="float-center"> 
 
- <img src="https://ssl.gstatic.com/onebox/weather/48/thunderstorms.png" alt="symbol-weather"> 
-<div class="temperature-now">25° C | F </div>
+<div class="temperature-now">
+    <strong>25</strong> 
+    <span class="units">°C | <a href="#">°F</a></span> 
+</div>
+
 <div class="row">
 <div class="col">
 <ul><li>wind: 3 km/h  </li> 
