--- a/Final.html
+++ b/Final.html
@@ -16,22 +16,29 @@
         <div class="weather-app">
 
 
-    <h1>Tel Aviv</h1>
+    <h1 id="city"></h1>
 <ul class="header"><li>Sunday</li><li>22:08</li></ul>
 
-<div class="weather-picture">
+<ul class="weather-picture"> 
+    <li>
  <img src="https://ssl.gstatic.com/onebox/weather/48/thunderstorms.png" alt="symbol-weather" class="float-center"> 
+</li>
+<li id="description">
+   It's raining cats and dogs
+</li>
+
+</ul>
 
 <div class="temperature-now">
-    <strong>25</strong> 
+    <strong id="temperature"></strong> 
     <span class="units">°C | <a href="#">°F</a></span> 
 </div>
 
 <div class="row">
 <div class="col">
-<ul><li>wind: 3 km/h  </li> 
+<ul><li>wind: <span id="wind"></span> km/h  </li> 
 </div>
-<div class="col"><li>humidity: 20% </li></div> <div class="col"><li>precipitacion: 2% </li></ul>
+<div class="col"><li> humidity: <span id="humidity"></span>% </li></div> <div class="col"><li>visibility: <span id="visibility"></span>km </li></ul>
 </div>
 </div>
 
