Updated date and time

--- a/Final.html
+++ b/Final.html
@@ -17,7 +17,7 @@
 
 
     <h1 id="city"></h1>
-<ul class="header"><li>Sunday</li><li>22:08</li></ul>
+<ul class="header"><li>Last updated:</li><li id="date"></li></ul>
 
 <ul class="weather-picture"> 
     <li>
