Added icon from API

--- a/Final.html
+++ b/Final.html
@@ -21,7 +21,7 @@
 
 <ul class="weather-picture"> 
     <li>
- <img src="https://ssl.gstatic.com/onebox/weather/48/thunderstorms.png" alt="symbol-weather" class="float-center"> 
+ <img src="" alt="symbol-weather" id="icon" class="float-center"> 
 </li>
 <li id="description">
    It's raining cats and dogs
