--- a/Final.html
+++ b/Final.html
@@ -14,7 +14,9 @@
     <div class="container">   
         <div class="weather-app-wrapper">
         <div class="weather-app">
-
+<form id="search-form" class="mb-3">
+    <div class="row"> <div class="col-9"><input type="search" placeholder="type a city..." class="form-control" id="city-input" /></div> <div class="col-3"><input type="submit" value="seach" class="btn btn-primary w-100"/></div></div>
+</form>
 
     <h1 id="city"></h1>
 <ul class="header"><li>Last updated:</li><li id="date"></li></ul>
