--- a/Final.html
+++ b/Final.html
@@ -15,7 +15,8 @@
         <div class="weather-app-wrapper">
         <div class="weather-app">
 <form id="search-form" class="mb-3">
-    <div class="row"> <div class="col-9"><input type="search" placeholder="type a city..." class="form-control" id="city-input" /></div> <div class="col-3"><input type="submit" value="seach" class="btn btn-primary w-100"/></div></div>
+    <div class="row"> <div class="col-9"><input type="search" placeholder="type a city..." class="form-control" id="city-input" /></div> <div class="col-3"><input type="submit" value="seach" class="btn btn-primary w-100" /></div>
+    </div>
 </form>
 
     <h1 id="city"></h1>
@@ -44,8 +45,65 @@
 </div>
 
 
-</div>
 
+<div class="row weather-forecast">
+    <div class="col-2">
+        <h3>
+            Sun
+        </h3>
+        <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+        <div class="weather-forecast-temperature">
+             17° <strong>22°</strong>
+        </div>
+    </div>
+    <div class="col-2">
+        <h3>
+            Mon
+        </h3>
+        <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+        <div class="weather-forecast-temperature">
+            17° <strong>22°</strong>
+        </div>
+    </div>
+    <div class="col-2">
+        <h3>
+            Tue
+        </h3>
+        <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+        <div class="weather-forecast-temperature">
+           17°<strong>22°</strong>
+        </div>
+    </div>
+    <div class="col-2">
+        <h3>
+            Wed
+        </h3>
+        <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+        <div class="weather-forecast-temperature">
+            17° <strong>22°</strong>
+        </div>
+    </div>
+    <div class="col-2">
+        <h3>
+            Thu
+        </h3>
+        <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+        <div class="weather-forecast-temperature">
+            17° <strong>22°</strong>
+        </div>
+    </div>
+    <div class="col-2">
+        <h3>
+            Fri
+        </h3>
+        <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+        <div class="weather-forecast-temperature">
+            17° <strong>22°</strong>
+        </div>
+        
+    </div>
+</div>
+</div>
 <small> <a href="https://github.com/Deblapin/Final-Project" target="_blank">Open-source code</a> by Debora Lapin
 </small>
 </div>
