--- a/Final.html
+++ b/Final.html
@@ -44,9 +44,7 @@
 </div>
 </div>
 
-
-
-<div class="row weather-forecast">
+<div class="row weather-forecast" id="forecast">
     <div class="col-2">
         <h3>
             Sun
@@ -56,50 +54,7 @@
              17° <strong>22°</strong>
         </div>
     </div>
-    <div class="col-2">
-        <h3>
-            Mon
-        </h3>
-        <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
-        <div class="weather-forecast-temperature">
-            17° <strong>22°</strong>
-        </div>
-    </div>
-    <div class="col-2">
-        <h3>
-            Tue
-        </h3>
-        <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
-        <div class="weather-forecast-temperature">
-           17°<strong>22°</strong>
-        </div>
-    </div>
-    <div class="col-2">
-        <h3>
-            Wed
-        </h3>
-        <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
-        <div class="weather-forecast-temperature">
-            17° <strong>22°</strong>
-        </div>
-    </div>
-    <div class="col-2">
-        <h3>
-            Thu
-        </h3>
-        <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
-        <div class="weather-forecast-temperature">
-            17° <strong>22°</strong>
-        </div>
-    </div>
-    <div class="col-2">
-        <h3>
-            Fri
-        </h3>
-        <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
-        <div class="weather-forecast-temperature">
-            17° <strong>22°</strong>
-        </div>
+    
         
     </div>
 </div>
