--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="weather-app">
             
 <form id="search-form" class="mb-3">
-    <div class="row"> <div class="col-9"><input type="search" placeholder="type a city..." class="form-control" id="city-input" /></div> <div class="col-3"><input type="submit" value="seach" class="btn btn-info" /></div>
+    <div class="row"> <div class="col-9"><input type="search" placeholder="type a city..." class="form-control" id="city-input" /></div> <div class="col-3"><input type="submit" value="search" class="btn btn-info" /></div>
     </div>
 </form>
 
